<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.chains-project</groupId>
  <artifactId>collector-sahab-parent-pom</artifactId>
  <version>0.3.4-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Collector Sahab Parent POM</name>
  <description>A tool for augmenting the static diff with runtime information</description>
  <url>https://github.com/ASSERT-KTH/collector-sahab/</url>

  <licenses>
    <license>
      <name>The Unlicense</name>
      <url>https://unlicense.org/</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>algomaster99</id>
      <name>Aman Sharma</name>
      <email>amansha@kth.se</email>
      <url>https://algomaster99.github.io/</url>
      <organization>KTH Royal Institute of Technology</organization>
      <organizationUrl>https://www.kth.se/</organizationUrl>
    </developer>
    <developer>
      <id>khaes-kth</id>
      <name>Khashayar Etemadi</name>
      <email>khaes@kth.se</email>
      <organization>KTH Royal Institute of Technology</organization>
      <organizationUrl>https://www.kth.se</organizationUrl>
    </developer>
  </developers>

  <modules>
    <module>trace-collector</module>
    <module>matched-line-finder</module>
    <module>commons</module>
    <module>main</module>
    <module>trace-diff</module>
  </modules>
  <scm>
    <connection>scm:git:https://github.com/ASSERT-KTH/collector-sahab/</connection>
    <url>https://github.com/ASSERT-KTH/collector-sahab.git</url>
  </scm>

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>2.15.0</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven.shared</groupId>
        <artifactId>maven-invoker</artifactId>
        <version>3.2.0</version>
      </dependency>
      <dependency>
        <groupId>info.picocli</groupId>
        <artifactId>picocli</artifactId>
        <version>4.7.3</version>
      </dependency>

      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>5.9.3</version>
      </dependency>
      <dependency>
        <groupId>org.hamcrest</groupId>
        <artifactId>hamcrest</artifactId>
        <version>2.2</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>2.36.0</version>
          <configuration>
            <java>
              <includes>
                <include>src/main/java/**/*.java</include>
                <include>src/test/java/**/*.java</include>
              </includes>
              <palantirJavaFormat></palantirJavaFormat>
              <formatAnnotations></formatAnnotations>
            </java>
            <pom>
              <includes>
                <include>pom.xml</include>
              </includes>
              <sortPom></sortPom>
            </pom>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.0.0</version>
          <configuration>
            <excludes>
              <!--            Exclude running tests that are part of src/test/resources -->
              <exclude>target/test-classes/**/*.java</exclude>
            </excludes>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.5.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.11.0</version>
        </plugin>

        <!--        Deployment -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.5.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.2.1</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>release</id>
      <properties>
        <altDeploymentRepository>local::file:./target/staging-deploy</altDeploymentRepository>
      </properties>
      <build>
        <defaultGoal>deploy</defaultGoal>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
                <configuration>
                  <attach>true</attach>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar</goal>
                </goals>
                <configuration>
                  <attach>true</attach>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
